--- a/almondo-web-app/package.json
+++ b/almondo-web-app/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-sigma/core": "^5.0.4",
+    "@react-sigma/layout-core": "^5.0.4",
+    "@react-sigma/layout-forceatlas2": "^5.0.4",
     "@tailwindcss/vite": "^4.1.11",
+    "graphology": "^0.26.0",
+    "graphology-layout": "^0.6.1",
+    "graphology-types": "^0.24.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sigma": "^3.0.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.7"
   },
