--- a/almondo-web-app/package.json
+++ b/almondo-web-app/package.json
@@ -14,6 +14,8 @@
     "@react-sigma/layout-core": "^5.0.4",
     "@react-sigma/layout-forceatlas2": "^5.0.4",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/downloadjs": "^1.4.6",
+    "downloadjs": "^1.4.7",
     "graphology": "^0.26.0",
     "graphology-layout": "^0.6.1",
     "graphology-types": "^0.24.8",
